Bug 240854 - In fullscreen, "Exit Full Screen" is checked
Summary: In fullscreen, "Exit Full Screen" is checked
Status: RESOLVED FIXED
Alias: None
Product: frameworks-kwidgetsaddons
Classification: Frameworks and Libraries
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Christoph Feck
URL:
Keywords: junior-jobs
: 461382 (view as bug list)
Depends on:
Blocks:
 
Reported: 2010-06-06 03:17 UTC by disabled account
Modified: 2022-12-09 21:38 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.101
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description disabled account 2010-06-06 03:17:12 UTC
Version:           latest git snapshot (0.4.xx) (using Devel) 
OS:                Linux

When you open up rekonq in full screen mode, click the wrench the entry says "Exit Full Screen Mode" instead of just "Full Screen Mode". It should simply say "Full Screen Mode" a checked "Exit Full Screen Mode" while in full screen mode, doesnt make any sense at all.

Reproducible: Always

Steps to Reproduce:
Open up rekonq, go to full screen mode, open the wrench menu.

Actual Results:  
An entry "Exit Full Screen Mode" is checked.

Expected Results:  
"Full Screen Mode" should be checked.

OS: Linux (x86_64) release 2.6.32-22-generic
Compiler: cc
Thanks :)
Comment 1 Panagiotis Papadopoulos 2010-06-13 14:06:13 UTC
I can confirm this, but seeing that Konqueror, Konsole and other KDE apps show the same hbehaviour, this is most likely a kdelibs bug/wish
Comment 2 Panagiotis Papadopoulos 2010-06-13 14:08:44 UTC
Can you please open a new bug report about this against kdelibs?
Thanks!
Comment 3 Nate Graham 2018-05-08 13:22:29 UTC
Either the text should change, or we should remove the checkbox. Using both doesn't make sense.

My vote is for removing the checkbox, so that we can always phrase the menu item in the imperative mood.
Comment 4 Christoph Feck 2018-05-31 18:41:35 UTC
My vote is to keep the checkbox, but always use the same text. Menus that change their texts are harder to grasp. I think the "Exit Fullscreen" text was added for a toolbar button (which lack a checkbox). We now have KDualAction for applications wanting to use two separate texts.
Comment 5 Christoph Feck 2022-11-17 20:25:42 UTC
*** Bug 461382 has been marked as a duplicate of this bug. ***
Comment 6 Bug Janitor Service 2022-11-18 20:13:16 UTC
A possibly relevant merge request was started @ https://invent.kde.org/frameworks/kwidgetsaddons/-/merge_requests/160
Comment 7 Nate Graham 2022-12-09 21:38:12 UTC
Git commit 29bb6db27efef72b3c9f206880bab79af38dc4cb by Nate Graham.
Committed on 09/12/2022 at 21:16.
Pushed by ngraham into branch 'master'.

Make Full Screen action use consistent text and icon

This is a checkable action, and right now when unchecked, it shows "Full
Screen Mode" but when checked, it shows "Exit Full Screen Mode". The
icon changes too.

Changing the text when checked does not make sense and violates the HIG
(https://develop.kde.org/hig/components/editing/togglebutton/#behavior).
FIXED-IN: 5.101

M  +4    -19   src/ktogglefullscreenaction.cpp
M  +0    -3    src/ktogglefullscreenaction.h

https://invent.kde.org/frameworks/kwidgetsaddons/commit/29bb6db27efef72b3c9f206880bab79af38dc4cb