src/ktogglefullscreenaction.h
@@ -81,9 +81,6 @@ public:
 protected:
     bool eventFilter(QObject *object, QEvent *event) override;
 
-protected Q_SLOTS:
-    void slotToggled(bool checked) override;
-
 private:
     Q_DECLARE_PRIVATE_D(KToggleAction::d, KToggleFullScreenAction)
 #if KWIDGETSADDONS_BUILD_DEPRECATED_SINCE(5, 79)
